# techwall

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: site.yml
crates/crawler/: Cargo.toml
crates/crawler/src/: convert.rs  main.rs
crates/techwall/: Cargo.toml
crates/techwall/src/: align.rs  lib.rs  png.rs
crates/techwall/tests/: sim.rs
crates/wasm/: Cargo.toml  Makefile
crates/wasm/src/: lib.rs
crawler/: index.js  list.json  list.txt  package.json  parse-icons.js
docs/: index.html
docs/assets/: index-B7HCmtMS.css  index-B_kXYPmg.css  index-Bd3z2tZ6.js  index-BuUaSQkT.css  index-CM8goUCT.css  index-Dk1ulLfn.js  index-UOCAxzMh.js  index-kJGa2EBp.js
docs/resource/: meta
front/: .gitignore  Makefile  README.md  bun.lockb  bunfig.toml  externals.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.index.json  tsconfig.json  vite.config.ts
front/public/: index.html
front/public/resource/: meta  meta.json
front/src/: Controller.tsx  IconAndDimensionSetter.tsx  IconSetter.tsx  Layout.tsx  Navigation.tsx  Wall.tsx  box.tsx  common.ts  context.tsx  index.css  index.tsx  layout.tsx  main.tsx  nav.tsx  util.ts
